--- a/playbook.yml
+++ b/playbook.yml
@@ -7,9 +7,29 @@
     - name: create groups based on distribution
       group_by: key={{ ansible_distribution }}
 
-- name: Set Hostname
+- name: Install Docker
   hosts: Ubuntu
   sudo: True
   tasks:
-    - name: Set the hostname to clean-slate
-      hostname: name=just-a-test
+    - name: Install cURL
+      apt: name=curl state=latest update_cache=true cache_valid_time=600
+    - name: Download Docker Installation Script
+      command: /usr/bin/curl --location --output /root/install-docker https://get.docker.com/
+    - name: Set Permission Bits On The Docker Installation Script
+      file: path=/root/install-docker owner=root group=root mode=0500
+    - name: Execute Docker Installation Script
+      shell: /root/install-docker
+    - name: Set Memory and Swap Accounting
+      lineinfile: dest=/etc/default/grub regexp='^GRUB_CMDLINE_LINUX=""' line='GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"'
+    - name: Add account to the docker group
+      user: name=vagrant groups=docker
+    - name: Restart Docker
+      command: service docker restart
+    - name: Test Docker
+      command: docker run hello-world
+    - name: Download Docker Compose Script
+      shell: /usr/bin/curl --location --output /usr/local/bin/docker-compose https://github.com/docker/compose/releases/download/1.4.1/docker-compose-`uname -s`-`uname -m`
+    - name: Set Permission Bits On The Docker Compose Script
+      file: path=/usr/local/bin/docker-compose owner=root group=root mode=0555
+    - name: Echo Docker Compose version
+      command: docker-compose --version
