--- a/playbook.yml
+++ b/playbook.yml
@@ -23,8 +23,9 @@
       lineinfile: dest=/etc/default/grub regexp='^GRUB_CMDLINE_LINUX=""' line='GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"'
     - name: Expose the daemon over insecure HTTP
       lineinfile: dest=/etc/default/docker line='DOCKER_OPTS="-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock"'
-#   - name: Add account to the docker group
+    - name: Add account to the docker group
 #     user: name=vagrant groups=docker
+      command: usermod -aG docker vagrant
     - name: Restart Docker
       command: service docker restart
     - name: Test Docker
