--- a/playbook.yml
+++ b/playbook.yml
@@ -19,19 +19,22 @@
       file: path=/root/install-docker owner=root group=root mode=0500
     - name: Execute Docker Installation Script
       shell: /root/install-docker
-    - name: Set Memory and Swap Accounting
-      lineinfile: dest=/etc/default/grub regexp='^GRUB_CMDLINE_LINUX=""' line='GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"'
-    - name: Rebuild Grub
-      command: /usr/sbin/update-grub
-    - name: Make some adjustments to the Docker configuration
+#   - name: Set Memory and Swap Accounting
+#     lineinfile: dest=/etc/default/grub regexp='^GRUB_CMDLINE_LINUX=""' line='GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"'
+#   - name: Rebuild Grub
+#     command: /usr/sbin/update-grub
+#   - name: Make some adjustments to the Docker configuration
 #     lineinfile: dest=/etc/default/docker line='DOCKER_OPTS="-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock --storage-driver=aufs --graph=/opt/docker"'
 #     lineinfile: dest=/etc/default/docker line='DOCKER_OPTS="-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock --storage-driver=overlay --graph=/opt/docker"'
-      lineinfile: dest=/etc/default/docker line='DOCKER_OPTS="--graph=/opt/docker"'
+#     lineinfile: dest=/etc/default/docker line='DOCKER_OPTS="--graph=/opt/docker"'
+    - name: Copy Docker configuration file for 16.04 boxes
+      copy: src=files/root-dir.conf dest=/etc/systemd/system/docker.service.d/root-dir.conf owner=root group=root mode=444 backup=no
     - name: Add account to the docker group
 #     user: name=vagrant groups=docker
       command: usermod -aG docker vagrant
     - name: Restart Docker
-      command: service docker restart
+#     command: service docker restart
+      command: systemctl restart docker
     - name: Test Docker
       command: docker run hello-world
 
