--- a/playbook.yml
+++ b/playbook.yml
@@ -35,9 +35,9 @@
 #     user: name=vagrant groups=docker
       command: usermod -aG docker vagrant
     - name: Adjust some defaults so we can deploy lots of containers
-      lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='DefaultTasksMax=unlimited'
-      lineinfile: dest=/etc/systemd/system.conf insertafter='DefaultTasksMax=unlimited' line='TasksMax=unlimited'
-      lineinfile: dest=/lib/systemd/system/docker.service insertafter=`\[Service\]` line='TasksMax=infinity'
+      lineinfile: dest=/etc/systemd/system.conf line='DefaultTasksMax=unlimited'
+      lineinfile: dest=/etc/systemd/system.conf line='TasksMax=unlimited'
+      lineinfile: dest=/lib/systemd/system/docker.service line='TasksMax=infinity'
     - name: Flush changes
       command: systemctl daemon-reload
     - name: Restart Docker
