--- a/playbook.yml
+++ b/playbook.yml
@@ -35,7 +35,7 @@
 #     user: name=vagrant groups=docker
       command: usermod -aG docker vagrant
     - name: Adjust some defaults so we can deploy lots of containers
-      lineinfile: dest=/etc/systemd/system.conf regexp='#DefaultTasksMax=512' line='DefaultTasksMax=unlimited'
+      lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='DefaultTasksMax=unlimited'
       lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='TasksMax=unlimited'
       lineinfile: dest=/lib/systemd/system/docker.service insertafter='\[Service\]' line='TasksMax=infinity'
     - name: Flush changes
