--- a/playbook.yml
+++ b/playbook.yml
@@ -35,8 +35,8 @@
 #     user: name=vagrant groups=docker
       command: usermod -aG docker vagrant
     - name: Adjust some defaults so we can deploy lots of containers
-      lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='DefaultTasksMax=unlimited'
-      lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='TasksMax=unlimited'
+      lineinfile: dest=/etc/systemd/system.conf line='DefaultTasksMax=unlimited' backup='no' create='no'
+      lineinfile: dest=/etc/systemd/system.conf line='TasksMax=unlimited'
       lineinfile: dest=/lib/systemd/system/docker.service insertafter='\[Service\]' line='TasksMax=infinity'
     - name: Flush changes
       command: systemctl daemon-reload
