Limit Docker to 1GB of log space

--- a/files/root-dir.conf
+++ b/files/root-dir.conf
@@ -1,4 +1,4 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon -H fd:// --graph="/opt/docker" --storage-driver=overlay
+ExecStart=/usr/bin/docker daemon -H fd:// --graph="/opt/docker" --storage-driver=overlay --log-opt max-size=1g
 
