Disabled Docker Machine temporarily because Ukraine is experiencing timeouts

--- a/playbook.yml
+++ b/playbook.yml
@@ -53,7 +53,8 @@
     - name: Echo Docker Compose version
       command: docker-compose --version
 
-    - name: Download Docker Machine Archive
-      get_url: url=https://github.com/docker/machine/releases/download/v0.7.0/docker-machine-Linux-x86_64 dest=/usr/local/bin/docker-machine mode=0555
-    - name: Echo Docker Machine version
-      command: docker-machine --version
+#   - name: Download Docker Machine Archive
+#     get_url: url=https://github.com/docker/machine/releases/download/v0.7.0/docker-machine-Linux-x86_64 dest=/usr/local/bin/docker-machine mode=0555
+#   - name: Echo Docker Machine version
+#     command: docker-machine --version
+
