--- a/playbook.yml
+++ b/playbook.yml
@@ -24,9 +24,9 @@
 #   - user: name=vagrant groups=docker
     - command: usermod -aG docker vagrant
     # Gosha changes -- removes container limits
-    - lineinfile: dest=/etc/systemd/system.conf regexp='#DefaultTasksMax=512' line='DefaultTasksMax=unlimited'
-    - lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='TasksMax=unlimited'
-    - lineinfile: dest=/lib/systemd/system/docker.service insertafter='\[Service\]' line='TasksMax=infinity'
+#    - lineinfile: dest=/etc/systemd/system.conf regexp='#DefaultTasksMax=512' line='DefaultTasksMax=unlimited'
+#    - lineinfile: dest=/etc/systemd/system.conf insertafter='\[Manager\]' line='TasksMax=unlimited'
+#    - lineinfile: dest=/lib/systemd/system/docker.service insertafter='\[Service\]' line='TasksMax=infinity'
     - command: systemctl daemon-reload
 #   - command: service docker restart
     - command: systemctl restart docker
