Make multi-distribution compatible

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,11 +6,16 @@
   tasks:
     - group_by: key={{ ansible_distribution }}
 
-- name: Install Docker
+- name: Install Ubuntu Packages
   hosts: Ubuntu
   become: True
   tasks:
     - apt: name=curl state=latest update_cache=true cache_valid_time=600
+
+- name: Install Docker
+  hosts: Ubuntu
+  become: True
+  tasks:
     - command: /usr/bin/curl --location --output /root/install-docker https://get.docker.com/
     - file: path=/root/install-docker owner=root group=root mode=0500
     - shell: /root/install-docker
@@ -28,10 +33,22 @@
     - command: systemctl restart docker
     - command: docker run hello-world
 
-    - shell: /usr/bin/curl --location --output /usr/local/bin/docker-compose https://github.com/docker/compose/releases/download/1.8.1/docker-compose-`uname -s`-`uname -m`
+
+- name: Install Docker Compose
+  hosts: all
+  become: True
+    vars:
+    version: 1.8.1
+  tasks:
+    - shell: /usr/bin/curl --location --output /usr/local/bin/docker-compose https://github.com/docker/compose/releases/download/{{ version }}/docker-compose-`uname -s`-`uname -m`
     - file: path=/usr/local/bin/docker-compose owner=root group=root mode=0555
     - command: docker-compose --version
 
-    - get_url: url=https://github.com/docker/machine/releases/download/v0.8.2/docker-machine-Linux-x86_64 dest=/usr/local/bin/docker-machine mode=0555
+- name: Install Docker Machine
+  hosts: all
+  become: True
+    vars:
+    version: 0.8.2
+  tasks:
+    - get_url: url=https://github.com/docker/machine/releases/download/v{{ version }}/docker-machine-Linux-x86_64 dest=/usr/local/bin/docker-machine mode=0555
     - command: docker-machine --version
-
