Tweak to work under CentOS

--- a/files/root-dir-centos.conf
+++ b/files/root-dir-centos.conf
@@ -1,4 +1,4 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon -H fd:// --graph="/opt/docker" --storage-driver=aufs
+ExecStart=/usr/bin/docker daemon -H fd:// --storage-driver=aufs
 
