--- a/files/root-dir-centos.conf
+++ b/files/root-dir-centos.conf
@@ -1,4 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon -H fd:// --storage-driver=aufs
-
+ExecStart=/usr/bin/dockerd --graph="/opt/docker" --storage-driver=overlay --log-opt max-size=1g
